<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference android:title="@string/titleUsername" android:key="username" android:summary="@string/summaryUsername"/>
    <EditTextPreference android:title="@string/titlePassword" android:summary="@string/summaryPassword" android:password="true" android:key="password"/>
    <EditTextPreference android:title="@string/titleApiRoot" android:summary="@string/summaryApiRoot" android:key="apiRoot"/>
    
    <ListPreference
        android:entries="@array/providers"
        android:entryValues="@array/providerValues"
        android:key="provider"
        android:summary="@string/summaryProvider"
        android:title="@string/titleProvider" />
    
    <ListPreference
        android:entries="@array/interval"
        android:entryValues="@array/intervalValues"
        android:key="interval"
        android:summary="@string/summaryUpdaterInterval"
        android:title="@string/titleUpdaterInterval" />
</PreferenceScreen>